# freight-time-prediction

./: .gitignore  README.md  notebook_ml.ipynb  projeto_1.ipynb  projeto_2.ipynb  pyproject.toml
imgs/: data_schema.png:Zone.Identifier
