[tool.poetry]
name = "pes-embraer-intro-cd"
version = "0.1.0"
description = ""
authors = ["Lucas Olini <lucasolini96@gmail.com>"]
readme = "README.md"
packages = [{include = "pes_embraer_intro_cd"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
scipy = "^1.11.1"
sklearn = "^0.0.post5"
scikit-learn = "^1.3.0"
catboost = "^1.2"
lightgbm = "^3.3.5"
mlflow = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
