[tool.poetry]
name = "freight-time-prediction"
version = "0.1.0"
description = ""
authors = ["Lucas Olini <lucasolini96@gmail.com>"]
readme = "README.md"
packages = [{include = "freight_time_prediction"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
lightgbm = "^3.3.5"
mlflow = "2.4"
setuptools = "^68.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
